# space-invaders

./: Cargo.toml  README.md
.cargo/: config.toml
src/: buttons.rs  display.rs  game_logic.rs  main.rs  wrapping_timer.rs
src/buttons/: button.rs
src/buttons/button/: debouncer.rs
src/game_logic/: loss_animation.rs  playing.rs  start_animation.rs  win_animation.rs
