[package]
name = "space-invaders"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
nrf52833-hal = "0.16.1"
panic-rtt-target = "0.1.3"
rtic = { version = "2.1.1", features = ["thumbv7-backend"] }
rtt-target = "0.5.0"
void = { version = "1.0.2", default-features = false }
